--- a/angular.json
+++ b/angular.json
@@ -18,7 +18,7 @@
             "polyfills": "src/polyfills.ts",
             "assets": [
               "src/assets",
-              "src/favicon.ico"
+              "src/logo.png"
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
@@ -76,7 +76,7 @@
             ],
             "assets": [
               "src/assets",
-              "src/favicon.ico"
+              "src/logo.png"
             ]
           }
         },
