--- a/angular.json
+++ b/angular.json
@@ -21,7 +21,8 @@
               "src/logo.png"
             ],
             "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/bootstrap/dist/css/bootstrap-reboot.css",
+              "node_modules/bootstrap/dist/css/bootstrap-grid.css",
               "src/scss/styles.scss"
             ],
             "scripts": []
