--- a/package.json
+++ b/package.json
@@ -22,20 +22,20 @@
     "@angular/platform-browser-dynamic": "6.0.6",
     "@angular/router": "6.0.6",
     "@ng-bootstrap/ng-bootstrap": "^2.2.2",
-    "core-js": "^2.4.1",
-    "rxjs": "^6.3.2",
-    "zone.js": "^0.8.26"
+    "core-js": "^2.6.9",
+    "rxjs": "^6.5.2",
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.8",
-    "@angular/cli": "6.0.8",
+    "@angular/cli": "8.1.2",
     "@angular/compiler-cli": "6.0.6",
     "@angular/language-service": "6.0.6",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^6.0.117",
-    "bootstrap": "^4.1.3",
-    "codelyzer": "^4.4.4",
+    "@types/jasmine": "^2.8.16",
+    "@types/jasminewd2": "^2.0.6",
+    "@types/node": "^6.14.7",
+    "bootstrap": "^4.3.1",
+    "codelyzer": "^4.5.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^2.0.5",
@@ -44,7 +44,7 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "^5.4.1",
+    "protractor": "^5.4.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.9.1",
     "typescript": "2.7.2"
